<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ShoppingWeek!</string>
    <string name="app_name">ShoppingWeek</string>
    <string name="create">Create a new account</string>
    <string name="account">Email Address</string>
    <string name="pw">Password</string>
    <string name="registersubmit">Submit</string>
    <string name="or_login">Or, login here</string>
    <string name="gotologin">Login</string>
    <string name="login">Login here:</string>
    <string name="or_register">Or register </string>
    <string name="gotoregister">Register</string>
    <string name="shop_classes">Shop Classes</string>
    <string name="course_catalog">Course Catalog</string>
    <string name="my_courses">My Courses</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="time">It is currently</string>
    <string name="random_class">ANOTHER RANDOM CLASS?</string>
    <string name="whats_on">What\'s on?</string>

</resources>